--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
-    "rest": "^1.3.1"
+    "rest": "^1.3.1",
+    "react-select": "^3.1.1"
   },
   "scripts": {
     "watch": "webpack --watch -d --output ./target/classes/static/built/bundle.js",
